--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -114,6 +114,7 @@
   border: none;
   background-color: $main-color;
   margin-right: 64px;
+  cursor: pointer;
 }
 .hero__img-list {
   display: flex;
