--- a/sass/layouts/_whoWeAre.scss
+++ b/sass/layouts/_whoWeAre.scss
@@ -54,17 +54,16 @@
   margin-bottom: 80px;
 }
 
-
-.whoWeAre__list-item{
+.whoWeAre__list-item {
   height: 152px;
-    flex-basis: 33%;
-    border-right: 4px solid $main-color;
-    padding-left: 48px;
-    padding-right: 48px;
-    &:last-child{
-      border: none;
-    }
+  flex-basis: 33%;
+  border-right: 4px solid $main-color;
+  padding-left: 48px;
+  padding-right: 48px;
+  &:last-child {
+    border: none;
   }
+}
 
 .list-item__title {
   font-weight: 600;
@@ -74,6 +73,7 @@
 }
 
 .list-item__text {
+  width: 350px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -95,4 +95,5 @@
   border-radius: 8px;
   border: none;
   background-color: $main-color;
+  cursor: pointer;
 }
