--- a/sass/layouts/_works.scss
+++ b/sass/layouts/_works.scss
@@ -1,22 +1,22 @@
-.works{
-    padding-top: 128px;
-    padding-bottom: 64px;
+.works {
+  padding-top: 128px;
+  padding-bottom: 64px;
 }
-.works-container{
-    text-align: center;
+.works-container {
+  text-align: center;
 }
-.works__text{
-    font-weight: 400;
-font-size: 24px;
-line-height: 1.5;
-text-align: center;
-margin-bottom: 56px;
-padding-right: 340px;
-    padding-left: 340px;
+.works__text {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.5;
+  text-align: center;
+  margin-bottom: 56px;
+  padding-right: 340px;
+  padding-left: 340px;
 }
-.works__btn{
-       min-width: 285px;
-    height: 80px;
+.works__btn {
+  min-width: 285px;
+  height: 80px;
   padding: 24px 70px;
   font-weight: 700;
   font-size: 20px;
@@ -25,5 +25,5 @@ padding-right: 340px;
   border-radius: 8px;
   border: none;
   background-color: $main-color;
- 
+  cursor: pointer;
 }
