--- a/sass/utilities/_base.scss
+++ b/sass/utilities/_base.scss
@@ -4,11 +4,23 @@ body {
 }
 
 .container {
+  width: 320px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  @media screen and (min-width:768px) {
+    width: 768px;
+  padding-right: 30px;
+  padding-left: 30px;
+
+  }
+  @media screen and (min-width:1200px) {
   width: 1440px;
   padding-right: 80px;
   padding-left: 80px;
-  margin-right: auto;
-  margin-left: auto;
+    
+  }
 }
 
 h1,
