--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,13 +3,20 @@ $main-color: #07142d;
   padding-top: 24px;
   padding-bottom: 24px;
   position: fixed;
+    @media screen and (min-width:320px) and (max-width:767px){
+    display: none;
+   }
 }
 .header-container {
   display: flex;
   align-items: center;
+  
 }
 .logo {
-  margin-right: 65px;
+  margin-right: 15px;
+     @media screen and (min-width:1200px){
+         margin-right: 65px;
+     }
 }
 .nav__list {
   display: flex;
@@ -17,7 +24,7 @@ $main-color: #07142d;
   gap: 15px;
 
     @media screen and (min-width:768px) {
-  gap: 20px;
+  gap: 15px;
   }
   @media screen and (min-width:1200px) {
      gap: 32px;
@@ -25,9 +32,12 @@ $main-color: #07142d;
 }
 .nav__item {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.5;
   color: rgba(7, 20, 45, 0.4);
+   @media screen and (min-width:768px) {
+  font-size: 14px;
+   }
 }
 .nav__link {
   padding-top: 16px;
@@ -56,7 +66,8 @@ $main-color: #07142d;
   transform: scale(1);
   
    &:hover,
-  &:focus {
+  &:focus,
+  &:active {
      box-shadow: 0 4px  4px  rgba(0, 0, 0, .1),
                0 1px  6px  rgba(0, 0, 0, .05),
                0 8px  8px  rgba(0, 0, 0, .1), 
