--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
-  padding-top: 207px;
-  padding-bottom: 147px;
+  padding-top: 150px;
+  padding-bottom: 80px;
   background-size: cover;
   background: linear-gradient(
       26.36deg,
@@ -79,57 +79,109 @@
       #ff6136 56.15%
     ),
     #ffffff;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 207px;
+    padding-bottom: 147px;
+  }
 }
 
 .hero__top-wrap {
-  width: 846px;
-  padding-left: 102px;
-}
+    margin-bottom: 40px;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    text-align: center;
+  }
 
+  @media screen and (min-width: 768px) {
+    width: 846px;
+    padding-left: 50px;
+     margin-bottom: 30px;
+  }
+   @media screen and (min-width: 1200px) {
+     width: 846px;
+    padding-left: 102px;
+    margin-bottom: 56px;
+   }
+}
+.hero__title{
+  padding-right: 50px;
+}
 .hero__text {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 1.5;
-  margin-bottom: 56px;
 
   & strong {
     font-weight: 700;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+  }
+  @media screen and (min-width: 1200px){
+    font-size: 24px;
+
   }
 }
 .hero__bottom-wrap {
   display: flex;
   align-items: center;
-  padding-left: 102px;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    gap: 0;
+    padding-left: 102px;
+    flex-wrap: wrap;
+  }
+   @media screen and (min-width: 1200px){
+    flex-wrap: nowrap;
+   }
 }
 
 .hero__btn {
-  min-width: 285px;
-  height: 80px;
-  padding: 24px 50px;
+  padding: 15px 25px;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.6;
   color: #ffffff;
   border-radius: 8px;
   border: none;
   background-color: $main-color;
-  margin-right: 64px;
+  margin-bottom: 20px;
   cursor: pointer;
   transition: 250ms ease-in-out;
   transform: scale(1);
   &:hover,
-  &:focus {
+  &:focus,
+  &:active {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1), 0 1px 6px rgba(0, 0, 0, 0.05),
       0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1),
       8px 32px 32px rgba(0, 0, 0, 0.15), 8px 64px 64px rgba(0, 0, 0, 0.15);
     transform: scale(1.02);
   }
+
+  @media screen and (min-width: 768px) {
+    padding: 15px 30px;
+    font-size: 20px;
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+    @media screen and (min-width: 1200px) {
+ margin-right: 64px;
+  padding: 24px 50px;
+    min-width: 285px;
+    height: 80px;
+    }
 }
 .hero__img-list {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-right: 24px;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 24px;
+  }
 }
 .hero__img-item {
   width: 115.21px;
