--- a/sass/layouts/_whoWeAre.scss
+++ b/sass/layouts/_whoWeAre.scss
@@ -1,30 +1,61 @@
 .whoWeAre {
-  padding-top: 128px;
+  padding-top: 80px;
   padding-bottom: 80px;
   background-color: #dedeee;
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+  }
+    @media screen and (min-width: 1200px){
+       padding-top: 128px; 
+    }
 }
 .whoWeAre-container {
   text-align: center;
 }
 .whoWeAre__title-wrap {
-  padding: 0 243px;
-  text-align: center;
-  padding-bottom: 64px;
-  margin-bottom: 48px;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    text-align: center;
+    margin-bottom: 48px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 0 243px;
+    padding-bottom: 64px;
+  }
 }
 
 .whoWeAre__text {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 1.5;
-  padding: 0 120px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 0 120px;
+    font-size: 24px;
+  }
 }
 .whoWeAre__img-list {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 64px;
-  margin-bottom: 80px;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    gap: 25px;
+    margin-bottom: 60px;
+    flex-wrap: nowrap;
+  }
+  @media screen and (min-width: 1200px) {
+    gap: 64px;
+    margin-bottom: 80px;
+  }
 }
 .whoWeAre__item {
   width: 140px;
@@ -34,62 +65,96 @@
   justify-content: flex-start;
   align-items: center;
 }
+.item-img{
+   @media screen and (min-width: 768px) and (max-width: 1200px){
+    width: 120px;
+   }
+}
+
 .item-imgg {
-  margin-top: -24px;
+  @media screen and (min-width: 1200px) {
+    margin-top: -24px;
+  }
 }
 
 .item-title {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
-  margin-top: 16px;
-  padding-left: 30px;
+  margin-top: 10px;
+
   text-align: center;
+  @media screen and (min-width: 768px) {
+   
+    font-size: 16px;
+  }
+  @media screen and (min-width: 1200px){
+ padding-left: 30px;
+    margin-top: 16px;
+  }
 }
 
 .whoWeAre__list {
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
-  margin-bottom: 80px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    margin-bottom: 80px;
+    margin-bottom: 0;
+  }
 }
 
 .whoWeAre__list-item {
-  height: 152px;
-  flex-basis: 33%;
-  border-right: 4px solid $main-color;
-  padding-left: 48px;
-  padding-right: 48px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 4px solid $main-color;
   &:last-child {
     border: none;
+  }
+
+  @media screen and (min-width: 768px) {
+    height: 152px;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 48px;
+    padding-right: 48px;
+    border-right: 4px solid $main-color;
+    border-bottom: none;
+    flex-basis: 33%;
   }
 }
 
 .list-item__title {
   font-weight: 600;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 1.5;
   text-align: left;
+  @media screen and (min-width: 768px) {
+    font-size: 24px;
+  }
 }
 
 .list-item__text {
-  width: 350px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
   text-align: left;
 
   & span {
     font-weight: 700;
   }
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+    width: 350px;
+  }
 }
 
 .whoWeAre__btn {
-  min-width: 285px;
-  height: 80px;
-  padding: 24px 50px;
+  padding: 15px 25px;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.6;
   color: #ffffff;
   border-radius: 8px;
@@ -99,10 +164,17 @@
   transition: 250ms ease-in-out;
   transform: scale(1);
   &:hover,
-  &:focus {
+  &:focus,
+  &:active {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1), 0 1px 6px rgba(0, 0, 0, 0.05),
       0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1),
       8px 32px 32px rgba(0, 0, 0, 0.15), 8px 64px 64px rgba(0, 0, 0, 0.15);
     transform: scale(1.02);
+  }
+  @media screen and (min-width: 768px) {
+    min-width: 285px;
+    height: 80px;
+    padding: 24px 50px;
+    font-size: 20px;
   }
 }
