--- a/sass/layouts/_works.scss
+++ b/sass/layouts/_works.scss
@@ -1,29 +1,56 @@
 .works {
-  padding-top: 128px;
+  padding-top: 70px;
   padding-bottom: 64px;
+   @media screen and (min-width: 768px) {
+      padding-top: 128px;
+   }
+
 }
 .works-container {
   text-align: center;
 }
 .works__text {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 16px;
   line-height: 1.5;
   text-align: center;
-  margin-bottom: 56px;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 56px;
   padding-right: 340px;
   padding-left: 340px;
+    font-size: 24px;
+  }
 }
 .works__btn {
-  min-width: 285px;
-  height: 80px;
-  padding: 24px 70px;
+ 
+  padding: 15px 25px;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.6;
   color: #ffffff;
   border-radius: 8px;
   border: none;
   background-color: $main-color;
   cursor: pointer;
+  transition: 250ms ease-in-out;
+  transform: scale(1);
+  &:hover,
+  &:focus,
+  &:active {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1), 0 1px 6px rgba(0, 0, 0, 0.05),
+      0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1),
+      8px 32px 32px rgba(0, 0, 0, 0.15), 8px 64px 64px rgba(0, 0, 0, 0.15);
+    transform: scale(1.02);
+  }
+
+    @media screen and (min-width:768px){
+    min-width: 285px;
+  height: 80px;
+  padding: 24px 50px;
+    font-size: 20px;
+     min-width: 285px;
+  height: 80px;
+  }
 }
